Adds a gradle task to run Sparkline